<resources>
	<string name="app_name">LunchFriends</string>
	<string name="server_client_id">1086155035692-t4b358nb0phat9pkel1pe1945f3e3c3v.apps.googleusercontent.com</string>
	<string name="facebook_app_id">438176003280751</string>
	<string name="fb_login_protocol_scheme">fb438176003280751</string>

	<string name="previous">&lt; Previous</string>
	<string name="next">Next  &gt;&gt;</string>
	<string name="back">Back</string>
	<string name="search">Search  &gt;&gt;</string>
	<string name="pick_place">Pick a place</string>
	<string name="place_colon">Place: </string>
	<string name="age_colon">Age: </string>
	<string name="username_colon">Username: </string>
	<string name="gender_colon">Gender: </string>
	<string name="fullname_colon">Full name: </string>
	<string name="hobbies_colon">Hobbies:</string>
	<string name="place">Place</string>
	<string name="time">Time</string>
	<string name="hour_colon">Hour:</string>
	<string name="minute_colon">Minute:</string>
	<string name="search_hobby">Search hobby</string>
	<string name="hobbies">Hobbies</string>
	<string name="gender">Gender</string>
	<string name="age">Age</string>
	<string name="from_colon">From:</string>
	<string name="to_colon">to:</string>
	<string name="password_colon">Password:</string>
	<string name="userid_colon">User ID:</string>
	<string name="log_in">Log in</string>
	<string name="register">Register</string>
	<string name="register_gt">Register &gt;</string>
	<string name="change_language">Change language</string>
	<string name="profile">Profile</string>
	<string name="logout">Logout</string>
	<string name="search_people">Search people</string>
	<string name="browse_people">Browse all people</string>
	<string name="lunch_history">Lunch history</string>
	<string name="exit">Exit</string>
	<string name="english">English</string>
	<string name="czech">Czech</string>
	<string name="loading_people">Loading people</string>
	<string name="where_would">Where would you like to go?</string>
	<string name="who_would">Who would you like to meet?</string>
	<string name="no_people">No people found.</string>
	<string name="different_search">Please try different search criteria.</string>
	<string name="profile_pic_url_colon">Profile picture URL:</string>
	<string name="back_lt">&lt; Back</string>
	<string name="no_place">Not found</string>
	<string name="registered">Congratulations!\nYou are successfully registered.\nYou can now log in.</string>
	<string name="registered_userid_fail">User with this User ID already exists.\nPlease use a different one.</string>
	<string name="registered_fail">Unknown error when registering.\nPlease try again later.</string>
	<string name="user_not_exist">User with this user ID doesn\'t exist.</string>
	<string name="error_try_later">Error, please try again later.</string>
	<string name="wrong_passwd">Wrong password for this user ID.</string>
	<string name="max_distance">Max. distance:</string>
	<string name="max_time_diff">Max. time difference:</string>
	<string name="not_matter">Doesn\'t matter</string>
	<string name="go_on_lunch">Go on lunch</string>
	<string name="all_fields_are_optional">All fields are optional</string>
	<string name="create_lunch">Create lunch</string>
	<string name="all_fields_are_required">All fields are required</string>
	<string name="created_lunch">Congratulations!\nLunch was successfully created.\nYou will get a notification when someone wants to join you.</string>
	<string name="create_lunch_fail">Unknown error when creating lunch.\nPlease try again later.</string>
	<string name="creating_lunch_please_wait">Creating lunch...\nPlease wait.</string>
	<string name="registering_please_wait">Registering...\nPlease wait.</string>
	<string name="notif_text">A person wants to go on lunch with you!</string>
	<string name="notif_title">Lunch invitation</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="inviter">Who invited you:</string>
	<string name="time_colon">Time: </string>
	<string name="email_colon">Email:</string>
	<string name="phone_colon">Phone:</string>
	<string name="user_contact">Contact info:</string>
	<string name="invite">Invite</string>
	<string name="no_connection">No internet connection</string>
	<string name="inv_sent">Invitation sent.</string>
	<string name="logging_in">Logging in</string>
	<string name="not_available">Not available</string>
	<string name="loading_history">Loading lunch history</string>
	<string name="history_empty">Your lunch history is empty.</string>

</resources>
