<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="huzevka.lunchfriends.activity.GoOnLunchActivity">

	<TextView
		android:id="@+id/textTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:textSize="24dp"
		android:text="@string/where_would"/>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textPlace"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/pickPlaceButton"
		android:layout_marginEnd="50dp"
		android:layout_toStartOf="@+id/pickPlaceButton"
		android:textStyle="bold"
		android:text="@string/place"/>

	<Button
		android:id="@+id/pickPlaceButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignTop="@id/textTitle"
		android:layout_marginTop="90dp"
		android:layout_marginEnd="150dp"
		android:text="@string/pick_place"/>

	<TextView
		android:id="@+id/placeName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:layout_marginStart="120dp"
		android:layout_marginTop="180dp"
		android:maxLines="1"
		android:lines="1"
		android:singleLine="true"
		android:text=""/>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toStartOf="@+id/pickPlaceButton"
		android:layout_marginEnd="50dp"
		android:layout_alignParentTop="true"
		android:layout_marginTop="280dp"
		android:textStyle="bold"
		android:text="@string/time"/>

	<TextView
		android:id="@+id/textHour"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="280dp"
		android:layout_marginStart="100dp"
		android:layout_marginEnd="8dp"
		android:text="@string/hour_colon"/>

	<NumberPicker
		android:id="@+id/hourPicker"
		android:layout_width="wrap_content"
		android:layout_height="100dp"
		android:layout_marginEnd="8dp"
		android:layout_alignParentTop="true"
		android:layout_marginTop="240dp"
		android:layout_toEndOf="@id/textHour">
	</NumberPicker>

	<TextView
		android:id="@+id/textMinute"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/hourPicker"
		android:layout_marginEnd="8dp"
		android:layout_alignBaseline="@id/textHour"
		android:text="@string/minute_colon"/>

	<NumberPicker
		android:id="@+id/minutePicker"
		android:layout_width="wrap_content"
		android:layout_height="100dp"
		android:layout_alignParentTop="true"
		android:layout_marginTop="240dp"
		android:layout_toEndOf="@id/textMinute">
	</NumberPicker>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textRequired"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/createLunchButton"
		android:layout_marginBottom="10dp"
		android:layout_alignStart="@+id/createLunchButton"
		android:textColor="@android:color/holo_red_dark"
		android:visibility="gone"
		android:text="@string/all_fields_are_required"/>

	<Button
		android:id="@+id/createLunchButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="50dp"
		android:layout_marginEnd="60dp"
		android:text="@string/create_lunch"/>



</RelativeLayout>
