<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="huzevka.lunchfriends.activity.SearchFriends1Activity">

	<TextView
		android:id="@+id/textTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:textSize="24sp"
		android:text="@string/who_would"/>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textAge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/textFrom"
		android:layout_marginEnd="30dp"
		android:layout_toStartOf="@+id/textFrom"
		android:textStyle="bold"
		android:text="@string/age"/>

	<TextView
		android:id="@+id/textFrom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/editFrom"
		android:layout_toStartOf="@+id/editFrom"
		android:layout_marginEnd="8dp"
		android:text="@string/from_colon"/>

	<EditText
		android:id="@+id/editFrom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/textTo"
		android:layout_toStartOf="@+id/textTo"
		android:layout_marginEnd="8dp"
		android:inputType="number"
		android:maxEms="6"
		android:minEms="2"/>

	<TextView
		android:id="@+id/textTo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/editTo"
		android:layout_toStartOf="@+id/editTo"
		android:layout_marginEnd="8dp"
		android:text="@string/to_colon"/>

	<EditText
		android:id="@+id/editTo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignTop="@id/textTitle"
		android:layout_marginTop="60dp"
		android:layout_marginEnd="90dp"
		android:inputType="number"
		android:maxEms="6"
		android:minEms="2"/>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textGender"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toStartOf="@+id/textFrom"
		android:layout_marginEnd="30dp"
		android:layout_alignTop="@id/textAge"
		android:layout_marginTop="70dp"
		android:textStyle="bold"
		android:text="@string/gender"/>

	<RelativeLayout
		android:id="@+id/spinnerRelativeLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@id/textGender"
		android:layout_alignBaseline="@id/textGender"
		android:background="@color/grey">
		<Spinner
			style="@style/Widget.AppCompat.DropDownItem.Spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="6dp"
			android:paddingBottom="6dp"
			android:id="@+id/spinnerGender"
			android:popupBackground="@color/grey"/>
	</RelativeLayout>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textHobbies"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toStartOf="@+id/textFrom"
		android:layout_marginEnd="30dp"
		android:layout_alignTop="@id/textGender"
		android:layout_marginTop="55dp"
		android:textStyle="bold"
		android:text="@string/hobbies"/>

	<EditText
		android:id="@+id/searchHobbyEditText"
		android:layout_height="40dp"
		android:layout_width="200dp"
		android:layout_alignBottom="@id/hobbyList"
		android:layout_alignStart="@id/hobbyList"
		android:layout_marginBottom="200dp"
		android:inputType="text"
		android:maxLines="1"
		android:lines="1"
		android:singleLine="true"
		android:hint="@string/search_hobby"/>

	<ListView
		android:id="@+id/hobbyList"
		android:layout_width="wrap_content"
		android:layout_height="200dp"
		android:layout_alignTop="@id/textHobbies"
		android:layout_toStartOf="@id/nextButton"
		android:layout_marginTop="65dp"
		android:layout_marginStart="30dp"
		android:layout_marginEnd="15dp"/>

	<!-- /////////////////////////////////////////// -->

	<TextView
		android:id="@+id/textOptional"
		android:layout_width="94dp"
		android:layout_height="wrap_content"
		android:layout_above="@+id/nextButton"
		android:layout_alignStart="@+id/nextButton"
		android:text="@string/all_fields_are_optional"/>

	<Button
		android:id="@+id/nextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="30dp"
		android:layout_alignParentEnd="true"
		android:layout_marginRight="20dp"
		android:text="@string/next"/>



</RelativeLayout>
