<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="huzevka.lunchfriends.activity.FriendResultsActivity">



	<ImageView
		android:id="@+id/arrow_left"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/arrow_left"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"/>

	<ImageView
		android:id="@+id/arrow_right"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/arrow_right"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"/>

	<ImageView
		android:id="@+id/userImage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="50dp"
		android:layout_centerHorizontal="true"/>

	<TextView
		android:id="@+id/fullnameText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="160dp"
		android:layout_alignTop="@+id/userImage"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:maxLines="1"
		android:lines="1"
		android:singleLine="true"
		android:text="@string/fullname_colon"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/genderText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:layout_alignTop="@+id/fullnameText"
		android:text="@string/gender_colon"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/ageText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:layout_alignTop="@+id/genderText"
		android:text="@string/age_colon"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/placeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:layout_alignTop="@+id/ageText"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:maxLines="1"
		android:lines="1"
		android:singleLine="true"
		android:text="@string/place_colon"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/timeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:layout_alignTop="@+id/placeText"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:maxLines="1"
		android:lines="1"
		android:singleLine="true"
		android:text="@string/time_colon"
		android:textSize="20sp"/>

	<Button
		android:id="@+id/inviteButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="20dp"
		android:visibility="gone"
		android:text="@string/invite"/>

	<Button
		android:id="@+id/backButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="69dp"
		android:visibility="gone"
		android:text="@string/back"/>


</RelativeLayout>
